--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,27 +1,39 @@
-cmake_minimum_required(VERSION 3.6)
+cmake_minimum_required(VERSION 3.13)
+project(test)
 
-set(NAME network)
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD 14)
 
-project(${NAME} VERSION 1.0.0 LANGUAGES CXX)
+include_directories(.)
+include_directories(network)
 
-include_directories(KNW)
+add_executable(test
+        network/IOManager.cpp
+        network/IOManager.hpp
+        network/IOTCP.cpp
+        network/IOTCP.hpp
+        network/ServerTCP.cpp
+        network/ServerTCP.hpp
+        main.cpp
+        net.hpp
+        network/DataTCP.cpp
+        network/DataTCP.hpp
+        network/BaseDataType.cpp
+        network/BaseDataType.hpp
+        network/Config.hpp
+        network/ClientTCP.cpp network/ClientTCP.hpp)
 
-add_executable(network
-        KNW/BaseDataType.cpp
-        KNW/BaseDataType.hpp
-        KNW/Config.hpp
-        KNW/ServerTCP.cpp
-        KNW/ServerTCP.hpp
-        main.cpp KNW/DataTCP.hpp KNW/IOTCP.cpp KNW/IOTCP.hpp)
-
-find_package(Boost REQUIRED COMPONENTS system program_options thread filesystem)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -fsanitize=address -g3")
-
-message(${Boost_LIBRARIES})
-target_link_libraries(${NAME}
-        ${Boost_LIBRARIES}
-        ${Boost_FILESYSTEM_LIBRARY}
-        ${Boost_SYSTEM_LIBRARY}
-        )
+#set(NAME test)
+#
+#project(${NAME})
+#
+#set(CMAKE_CXX_STANDARD 14)
+#
+#target_link_libraries(${NAME} PRIVATE Boost::filesystem)
+#target_link_libraries(${NAME} PRIVATE Boost::thread)
+#target_link_libraries(${NAME} PRIVATE Boost::program_options)
+#
+#add_executable(${NAME}
+#        main.cpp net.hpp network/ServerTCP.cpp network/ServerTCP.hpp
+#        network/IOTCP.cpp
+#        network/IOTCP.hpp network/IOManager.cpp network/IOManager.hpp)
+#
